--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" style="width: 100%; height: 100%">
+<html lang="en" style="width: 100%; height: 100%; overflow: hidden">
 <head>
   <meta charset="utf-8">
   <title>Курсы английского Hogwarts</title>
@@ -7,8 +7,36 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
+
+  <style>
+    .loader {
+      position: absolute;
+      top: 250px;
+      left: calc(50% - 40px);
+      border: 8px solid #dddddd;
+      border-radius: 50%;
+      border-top: 6px solid #3498db;
+      width: 80px;
+      height: 80px;
+      -webkit-animation: spin 2s linear infinite; /* Safari */
+      animation: spin 2s linear infinite;
+    }
+
+    /* Safari */
+    @-webkit-keyframes spin {
+      0% { -webkit-transform: rotate(0deg); }
+      100% { -webkit-transform: rotate(360deg); }
+    }
+
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+  </style>
 </head>
-<body style="width: 100%; height: 100%">
-  <app-root>Loading...</app-root>
+<body style="width: 100%; height: 100%;">
+  <app-root>
+    <div class="loader"></div>
+  </app-root>
 </body>
 </html>
