--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" style="width: 100%; height: 100%; overflow: hidden">
+<html lang="en" style="width: 100%; height: 100%; overflow: hidden;">
 <head>
   <meta charset="utf-8">
   <title>Курсы английского Hogwarts</title>
@@ -13,9 +13,9 @@
       position: absolute;
       top: 250px;
       left: calc(50% - 40px);
-      border: 8px solid #dddddd;
+      border: 4px solid #2155a8;
       border-radius: 50%;
-      border-top: 6px solid #3498db;
+      border-top: 4px solid #1966e5;
       width: 80px;
       height: 80px;
       -webkit-animation: spin 2s linear infinite; /* Safari */
@@ -34,7 +34,7 @@
     }
   </style>
 </head>
-<body style="width: 100%; height: 100%;">
+<body style="width: 100%; height: 100%; background: #2E4057;">
   <app-root>
     <div class="loader"></div>
   </app-root>
